--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-router-dom": "^5.3.4",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "@strapi/strapi": "4.11.0"
   },
   "author": {
     "name": "Ayodeji Alarape"
